--- a/application/index/view/gene/analysis.html
+++ b/application/index/view/gene/analysis.html
@@ -77,7 +77,7 @@
 						</tr> -->
 						<tr>
                             <td>
-                            	<a is_open="{$vo.is_open}" onclick="check_open(this)" _href="{:url('gene/analysis','',false)}?id={$vo.id2}">{$vo.id2}</a>
+                            	<a is_open="{$vo.is_open}" onclick="check_open(this)" _href="{:url('gene/my_information','',false)}?id={$vo.id2}">{$vo.id2}</a>
                             </td>
                             <td>{$vo.name2}</td>
                             <td>{$vo.nation2}</td>
