--- a/application/index/view/gene/my_information.html
+++ b/application/index/view/gene/my_information.html
@@ -69,7 +69,7 @@
 	        				<div class="in">
 	        					<span class="name tr">性别:</span>
 	        					<div class="text">
-	        						<input type="text" value="{if condition='isset($info.sex)'}{if condition='$info.sex'}男{else/}女{/if}{/if}" />
+	        						<input type="text" value="{if condition='isset($info.sex)'}{$info.sex}{/if}" />
 	        					</div>
 	        				</div>
 	        				
