手机端页面修改

--- a/application/mobile/view/user/my_gene.html
+++ b/application/mobile/view/user/my_gene.html
@@ -140,7 +140,8 @@
 				if($(".span_right").css('display')=="none"){
 					
 					// $(location).attr('href',"/mobile/user/gene_info?id="+id);
-					$(location).attr('href',"/mobile/user/gene_analysis_list?id="+id);
+//					$(location).attr('href',"/mobile/user/gene_analysis_list?id="+id);
+					$(location).attr('href',"/mobile/user/my_information");
 	
 				}
 			
