--- a/application/mobile/view/user/gene_analysis_list.html
+++ b/application/mobile/view/user/gene_analysis_list.html
@@ -70,7 +70,7 @@
 							</td>
 						</tr> -->
 						<tr>
-							<td><a is_open="{$vo.is_open}" onclick="check_open(this)" _href="{:url('user/gene_analysis_list','',false)}?id={$vo.id2}">{$vo.id2}</a></td>
+							<td><a is_open="{$vo.is_open}" onclick="check_open(this)" _href="{:url('user/my_information','',false)}?id={$vo.id2}">{$vo.id2}</a></td>
 							<td>{$vo.name2}</td>
 							<td>{$vo.nation2}</td>
 							<td>{$vo.region2}</td>
@@ -128,7 +128,7 @@
 									'<tbody class="zuijia">'+
 									'<tr>'+
 										'<td>'+
-											'<a is_open="'+data.data[i].is_open+'" onclick="check_open(this)" _href="{:url(\"user/gene_analysis_list\",\"\",false)}?id='+data.data[i].id2+'">'+data.data[i].id2+'</a>'+
+											'<a is_open="'+data.data[i].is_open+'" onclick="check_open(this)" _href="{:url(\"user/my_information\",\"\",false)}?id='+data.data[i].id2+'">'+data.data[i].id2+'</a>'+
 										'</td>'+
 										'<td>'+data.data[i].name1+'</td>'+
 										'<td>'+data.data[i].name2+'</td>'+
