--- a/application/admin/view/gene/config.html
+++ b/application/admin/view/gene/config.html
@@ -91,7 +91,7 @@
                     <thead>
                         <tr class="text-c">
                             <th width="50">DYS19</th>
-                            <th width="50">DYS389I</th>
+                            <th width="50">DYS389a</th>
                             <th width="50">DYS389b</th>
                             <th width="50">DYS390</th>
                             <th width="50">DYS391</th>
@@ -104,7 +104,7 @@
                                 <input type="text" class="input-text" style="text-align: center;" name="standard[dys19]" value="{$mutation.dys19 ? $mutation.dys19 : 0}" />
                             </td>
                             <td width="50">
-                                <input type="text" class="input-text" style="text-align: center;" name="standard[dys389i]" value="{$mutation.dys389i ? $mutation.dys389i : 0}" />
+                                <input type="text" class="input-text" style="text-align: center;" name="standard[dys389a]" value="{$mutation.dys389a ? $mutation.dys389a : 0}" />
                             </td>
                             <td width="50">
                                 <input type="text" class="input-text" style="text-align: center;" name="standard[dys389b]" value="{$mutation.dys389b ? $mutation.dys389b : 0}" />
