--- a/application/admin/view/gene/info.html
+++ b/application/admin/view/gene/info.html
@@ -51,7 +51,7 @@
                     <thead>
                         <tr class="text-c">
                             <th width="50">DYS19</th>
-                            <th width="50">DYS389I</th>
+                            <th width="50">DYS389a</th>
                             <th width="50">DYS389b</th>
                             <th width="50">DYS390</th>
                             <th width="50">DYS391</th>
@@ -64,7 +64,7 @@
                                 <input type="text" class="input-text" style="text-align: center;" name="standard[dys19]" value="{$info.dys19 ? $info.dys19*0.01 : 0}" />
                             </td>
                             <td width="50">
-                                <input type="text" class="input-text" style="text-align: center;" name="standard[dys389i]" value="{$info.dys389i ? $info.dys389i*0.01 : 0}" />
+                                <input type="text" class="input-text" style="text-align: center;" name="standard[dys389a]" value="{$info.dys389a ? $info.dys389a*0.01 : 0}" />
                             </td>
                             <td width="50">
                                 <input type="text" class="input-text" style="text-align: center;" name="standard[dys389b]" value="{$info.dys389b ? $info.dys389b*0.01 : 0}" />
