--- a/application/index/view/gene/index.html
+++ b/application/index/view/gene/index.html
@@ -30,8 +30,9 @@
                     {/volist}
                 </ul>
                 <div style="width: 150px;border: 1px solid green;text-align: center;margin: 0 auto;margin-top: 40px;height: 50px;line-height: 50px; border-radius: 10px;border: 1px solid black;cursor: pointer;" onclick="javascript:location.href='/index/index/import_data'" hidden>导入数据</div>
+                <div style="text-align: center;margin-top: 20px;">上传数据-请在首页上传您的基因数据</div> 
             </div>
-                
+           
         </div> 		
         <!-- 底部 -->
         <div class="footer">
