--- a/application/index/view/gene/analysis.html
+++ b/application/index/view/gene/analysis.html
@@ -176,9 +176,9 @@
 									'<td>'+
 										'<a is_open="'+data.data[i].is_open+'" onclick="check_open(this)" _href="{:url(\"gene/my_information\",\"\",false)}?id='+data.data[i].id2+'">'+data.data[i].id2+'</a>'+
 									'</td>'+
-									'<td>'+data.data[i].name1+'</td>'+
 									'<td>'+data.data[i].name2+'</td>'+
-									'<td>'+data.data[i].nation1+'</td>'+
+									'<td>'+data.data[i].nation2+'</td>'+
+									'<td>'+data.data[i].region2+'</td>'+
 									'<td rowspan="2" class="niandai" hidden=""><span class="nian"><span>'+data.data[i].line.name+'</span><span>年</span></span><br><span>('+data.data[i].id2+')代</span></td>'+
 									'<td rowspan="2" class="chaodai">'+
 										'<img src="/public/static/index/images/home/jiantou5.png" class="jiantoudd">'+
