--- a/application/mobile/view/user/my_gene.html
+++ b/application/mobile/view/user/my_gene.html
@@ -8,6 +8,11 @@
 		<link rel="stylesheet" href="__STATIC__/css/public/public_head.css">
 		<link rel="stylesheet" href="__STATIC__/css/public/public.css" />
 		<link rel="stylesheet" href="__STATIC__/css/home/bianji.css" />
+		<style>
+			.lb_headWrap{
+				background: #F5F5F5;
+			}
+		</style>
 		<script src="__STATIC__/js/public/rem.js"></script>
 	</head>
 
@@ -15,13 +20,13 @@
 		<div>
 			<div class="lb_headWrap">
 				<p class="lb_headWrap_return" data-num="1">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png" onclick="returnFun()" />
-					<span class="lb_headWrap_return_img22" style="display: none;">取消</span>
+					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png" onclick="returnFun()" />
+					<span class="lb_headWrap_return_img22" style="display: none;" style="color: black;">取消</span>
 					
 				</p>
-				<span>基因数据</span>
-				    <p class="lb_headWrap_text lb_header_righticon">删除</p>
-				    <p class="lb_headWrap_text lb_header_righticon22">编辑</p>
+				<span style="color: black;">基因数据</span>
+				    <p class="lb_headWrap_text lb_header_righticon" style="color: black;">删除</p>
+				    <p class="lb_headWrap_text lb_header_righticon22" style="color: black;">编辑</p>
 			</div>
 
 			<div class="liebiao_ear">
