--- a/application/mobile/view/user/gene_analysis_list222.html
+++ b/application/mobile/view/user/gene_analysis_list222.html
@@ -16,7 +16,7 @@
 			<!--public head-->
 			<div class="lb_headWrap">
 				<p class="lb_headWrap_return" data-num="1">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png" onclick="javascript:location.href='/mobile/user/my_gene'" />
+					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png" onclick="javascript:location.href='/mobile/user/my_gene'" />
 				</p>
 				<span>基因分析结果</span>
 				<!--<p class="lb_headWrap_text lb_header_righticon">编辑</p>-->
