--- a/application/mobile/view/user/gene_result.html
+++ b/application/mobile/view/user/gene_result.html
@@ -16,7 +16,7 @@
 			<!--public head-->
 			<div class="lb_headWrap">
 				<p class="lb_headWrap_return" data-num="1">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png" onclick="returnFun()" />
+					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png" onclick="returnFun()" />
 
 				</p>
 				<span>基因分析结果</span>
